Fixed margin collapsing.

--- a/main.css
+++ b/main.css
@@ -64,6 +64,7 @@ hr {
     outline-color: #F7CE3E;
     outline-width: 2px;
     outline-style: outset;
+    display: inline-block;
     padding: 10px;
     margin: 10px;
 }
